Updated sidebar to prevent overflow,added about me

--- a/src/Components/About/index.scss
+++ b/src/Components/About/index.scss
@@ -1,10 +1,13 @@
 .About{
     position: absolute;
     left: 70%;
-    top:50%;
-    width:40%;
+    top:40%;
+    width:20%;
+    margin-left: 50px;
+    margin-right: 10px;
     font-family: 'Helvetica Neue';
-    h1{
+    animation: lateLoad 5s;
+    h1{    
         animation: colorChange 2s;
         animation-iteration-count: infinite;
     }
@@ -15,4 +18,10 @@
     35%{color:red}
     70%{color:yellow}
     100%{color:black}
+}
+
+@keyframes lateLoad {  
+    0%{opacity: 0}
+    75%{opacity: 0}
+    100%{opacity: 1}
 }
